--- a/templates/base.html
+++ b/templates/base.html
@@ -13,78 +13,78 @@
     <title>UK Events</title>
 </head>
 <body>
-        <header>
-            <!-- top navbar -->
-            <nav class="nav-extended text-shadow indigo darken-4">
-                <div class="nav-wrapper">
-                    <a href="{{ url_for('get_events') }}" class="brand-logo">UK Events</a>
-                    <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
-                    <ul class="right hide-on-med-and-down">
-                        <li><a href="{{ url_for('get_events') }}">Home</a></li>
-                        {% if session.user %}
-                            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                            <li><a href="{{ url_for('new_event') }}">New Event</a></li>
-                            {% if session.user|lower == "admin"|lower %}
-                                <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
-                            {% endif %}
-                            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-                        {% else %}
-                            <li><a href="{{ url_for('login') }}">Log In</a></li>
-                            <li><a href="{{ url_for('register') }}">Register</a></li>
+    <header>
+        <!-- top navbar -->
+        <nav class="nav-wrapper text-shadow indigo darken-4">
+            <div class="nav-wrapper">
+                <a href="{{ url_for('get_events') }}" class="brand-logo">UK Events</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="{{ url_for('get_events') }}">Home</a></li>
+                    {% if session.user %}
+                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                        <li><a href="{{ url_for('new_event') }}">New Event</a></li>
+                        {% if session.user|lower == "admin"|lower %}
+                            <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
                         {% endif %}
-                    </ul>
-                </div>
-            </nav>
-
-            <!-- mobile sidenav -->
-            <ul class="sidenav indigo-text text-darken-4" id="mobile-demo">
-                <li><h4 class="center-align indigo-text text-darken-4">UK Events</h4></li>
-                <li><a href="{{ url_for('get_events') }}">Home</a></li>
-                {% if session.user %}
-                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                    <li><a href="{{ url_for('new_event') }}">New Event</a></li>
-                    {% if session.user|lower == "admin"|lower %}
-                        <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+                        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('login') }}">Log In</a></li>
+                        <li><a href="{{ url_for('register') }}">Register</a></li>
                     {% endif %}
-                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-                {% else %}
-                    <li><a href="{{ url_for('login') }}">Login</a></li>
-                    <li><a href="{{ url_for('register') }}">Sign Up</a></li>
-                {% endif %}
-            </ul>
-        </header>
-
-        <div>
-            <!-- flash messages -->
-            {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    {% for message in messages %}
-                        <div class="row flashes">
-                                <h3 class="indigo lighten-5 center-align indigo-text text-darken-4">{{ message }}</h3>
-                        </div>
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
-        </div>
-
-        <section class="container">
-            {% block content %}
-            {% endblock %}
-        </section>
-
-        <!--Footer-->
-        <footer class="page-footer indigo darken-4">
-            <div class="container text-uppercase text-shadow">
-                <span>Find us on:</span>
-                <i class="fab fa-facebook" aria-hidden="true"></i>
-                <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
-                <i class="fab fa-instagram" aria-hidden="true"></i>
-                <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
-                <i class="fab fa-twitter" aria-hidden="true"></i>
-                <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
-                <p>Copyright © UK Events 2024</p>
+                </ul>
             </div>
-        </footer>
+        </nav>
+
+        <!-- mobile sidenav -->
+        <ul class="sidenav indigo-text text-darken-4" id="mobile-demo">
+            <li><h4 class="center-align indigo-text text-darken-4">UK Events</h4></li>
+            <li><a href="{{ url_for('get_events') }}">Home</a></li>
+            {% if session.user %}
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="{{ url_for('new_event') }}">New Event</a></li>
+                {% if session.user|lower == "admin"|lower %}
+                    <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+                {% endif %}
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            {% else %}
+                <li><a href="{{ url_for('login') }}">Login</a></li>
+                <li><a href="{{ url_for('register') }}">Sign Up</a></li>
+            {% endif %}
+        </ul>
+    </header>
+
+    <div>
+        <!-- flash messages -->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="row flashes">
+                            <h3 class="indigo lighten-5 center-align indigo-text text-darken-4">{{ message }}</h3>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </div>
+
+    <section class="container">
+        {% block content %}
+        {% endblock %}
+    </section>
+
+    <!--Footer-->
+    <footer class="page-footer indigo darken-4">
+        <div class="container text-uppercase text-shadow">
+            <span>Find us on:</span>
+            <i class="fab fa-facebook" aria-hidden="true"></i>
+            <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
+            <i class="fab fa-twitter" aria-hidden="true"></i>
+            <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
+            <p>Copyright © UK Events 2024</p>
+        </div>
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
