--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,4 +11,49 @@
         </div>
     </div>
 
+    <div class="row">
+        {% if events|length > 0 %}
+            {% for event in events %}
+                {% if session.user|lower == event.created_by|lower %}
+                <div class="col s12 m6 l4">
+                    <div class="card card-height">
+                        <div class="card-image transparent circle responsive-img waves-effect waves-block">
+                            <img class="activator" src="{{ event.image }}" alt="{{ event.event_name}}">
+                        </div>
+                        <div class="card-content indigo-text text-darken-4">
+                            <span class="card-title activator button-floating halfway-fab indigo-text text-darken-4">
+                                <i class="fas fa-ellipsis-v right"></i>
+                            </span>
+                            <h6 class="event-card "><strong>{{ event.event_name }}</strong></h6>
+                            <p class="event-card"><strong>Date:</strong>  {{ event.date }}</p>
+                            <p class="event-card"><strong>Location:</strong> {{ event.location }}</p>
+                            <div class="right">
+                                {% if session.user|lower %}
+                                    <p>Interested? <button id=one-use class="like btn-small btn-floating waves-effect waves-light indigo darken-4">
+                                        <i class="far fa-thumbs-up"></i></button>
+                                        <span class="interested">0</span>
+                                    </p>
+                                {% endif %}
+                            </div>
+                            <br>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title indigo-text text-darken-4"><i class="material-icons right indigo-text text-darken-4 far fa-window-close"></i><h5><strong>{{ event.event_name }}</strong></h5></span>
+                            <p class="indigo-text text-darken-4">{{ event.event_details }}</p><br>
+                            <p class="event-card indigo-text text-darken-4"><strong>Website: </strong><a href="{{ event.link }}">{{ event.event_name }}</a></p>
+                            <p class="event-card indigo-text text-darken-4"><strong><em>Event created by: {{ event.created_by }}</em></strong></p>
+                            {% if session.user|lower == event.created_by|lower %}
+                            <a href="{{ url_for('delete_event', event_id=event._id) }}" class="btn-small btn-edit red darken-4">Delete</a>
+                            <a href="{{ url_for('edit_event', event_id=event._id) }}" class="btn-small btn-edit indigo darken-4">Edit</a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
+            {% endfor %}
+        {% else %}
+            <h3 class="white-text text-darken-4 indigo darken-4 center-align">It looks like you haven't added an event yet!</h3>
+        {% endif %}   
+    </div>
+
 {% endblock %}
