--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    background-image: url(../images/background.webp);
+    background-image: url(../images/background.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
